task desc fixed

--- a/keypoints-cats-tasks.ipynb
+++ b/keypoints-cats-tasks.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "### Формат сдачи\n",
     "\n",
-    "После того, как вы выполните домашную работу, поместите jupyter notebook с выполнеными заданиями, а так же все SAS-таблицы с сохраненными моделями в закрытый git-репозиторий на GitHub. Предоставьте доступ к репозиторию аккаунтам GazizovMarat и Ala1s (добавив в свой реппозиторий в качестве коллабораторов).\n",
+    "После того, как вы выполните домашную работу, поместите jupyter notebook с выполнеными заданиями (output всех ячеек должен сохранится) в закрытый git-репозиторий на GitHub. Предоставьте доступ к репозиторию аккаунтам GazizovMarat и Ala1s (добавив в свой репозиторий в качестве коллабораторов).\n",
     "\n",
     "### Важно \n",
     "Для того, чтобы ваши результаты были воспроизводимыми для проверки, указывайте seed при вызове методов, где это возможно. Напоминания об этом так же содержатся в тексте заданий."
